version 0.99.4 (not yet released)
           * added new example "plotmap_shaded.py" (shaded relief plot).
           * added new example "plothighsandlows.py".
           * add fix_aspect kwarg to Basemap.__init__, when False
             axes.set_aspect is set to 'auto' instead of default 'equal'.
             Can be used to make plot fill whole plot region, even if the 
             plot region doesn't match the aspect ratio of the map region.
           * added date2index function, updated netcdftime to 0.7.1.
           * added maskoceans function.
           * update pupynere to version 1.0.8 (supports writing large files).
           * added more informative error message in readshapefile when
             one of the shapefile components can't be found.
version 0.99.3 (svn revision 6780)
           * if upper right/lower left corners nor width/height given for
             azimuthal equidistant ('aeqd') the whole world is drawn in 
             a circle (only works for perfect spheres, not ellipsoids).
           * have setup.py check for already installed pyshapelib (just
             like it does for httplib2 and pydap).
           * Basemap will now look for it's data in BASEMAPDATA.
             If that env var not set, it will fall back to it's 
             default location.
           * if readshapefile is called with drawbounds=True, a
             LineCollection object is appended to the returned tuple.
           * make sure drawmapscale method returns a list of objects that
             can be iterated over to remove them from the plot.
           * fillcontinents was returning just last Polygon instance.
             Now returns a list of all Polygon instances.  
           * bluemarble/warpimage:  pass kwargs to imshow, 
             return Image instance.
version 0.99.2 (svn revision 6541)
           * fix drawlsmask method so that it works for cylindrical
             projections with limits outside (-180,180).