@@ -132,5 +132,6 @@ Jesper Larsen
 Ryan May
 David Huard
 Mauro Cavalcanti
+Chris Murphy
 
 for valuable contributions.
