@@ -1,4 +1,6 @@
 version 0.99.4 (not yet released)
+           * added latmax kwarg to drawparallels and drawmeridians 
+             (patch from Chris Murphy).
            * added new example "plotmap_shaded.py" (shaded relief plot).
            * added new example "plothighsandlows.py".
            * add fix_aspect kwarg to Basemap.__init__, when False
